fix: scrollbar theming

--- a/src/app.css
+++ b/src/app.css
@@ -22,8 +22,8 @@ html {
   --color-base: 51 55 59;
   --color-crust: 32 35 37;
   --color-mantle: 13 14 15;
-  --scrollbar-thumb-color: rgb(var(--color-base));
-  --scrollbar-track-color: rgb(var(--color-surface2));
+  --scrollbar-thumb-color: var(--color-base);
+  --scrollbar-track-color: var(--color-surface2);
 }
 
 * {
@@ -38,13 +38,19 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--scrollbar-track-color);
+  -webkit-box-shadow: inset 0 0 6px rgba(var(--color-text) / 0.3);
+  background-color: rgba(var(--scrollbar-track-color));
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(var(--color-base));
-  background-color: var(--scrollbar-thumb-color);
+  background-color: rgba(var(--scrollbar-thumb-color) / 0.8);
+  -webkit-box-shadow: inset 0 0 6px rgba(var(--color-base) / 0.3);
+  border-radius: 999px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(var(--scrollbar-thumb-color) / 0.6);
+  -webkit-box-shadow: inset 0 0 6px rgba(var(--color-base) / 0.3);
   border-radius: 999px;
 }
 
@@ -53,8 +59,8 @@ html {
 @supports (scrollbar-color: auto) {
   * {
     scrollbar-width: thin;
-    scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
-    scrollbar-color: red blue;
+    scrollbar-color: rgba(var(--scrollbar-thumb-color) / 0.8)
+      rgba(var(--scrollbar-track-color));
   }
 }
 
